# FinMind

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  DEPLOYMENT.md  LICENSE  README.md  docker-compose.yaml  pyproject.toml  test.py
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md  glossary.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
data/seed/: vn100.csv
docs/adr/: 0001-vn-only-v1-market-scope.md  0002-daily-canonical-vn-price-data.md  0003-vn100-universe-and-lazy-fetch.md  0004-dormant-roadmap-market-connectors.md  0005-phase-003-m1-m2-chat-milestones.md  0006-shared-evidence-lineage-tables.md  0007-single-timescaledb-store-for-v1.md  ADR-001-hybrid-workflow-definitions-and-agent-skills.md  ADR-002-direct-async-sse-streaming.md  ADR-003-artifact-and-citation-inspection-contract.md  README.md  _template.md  template.md
docs/notes/: pattern-detection-citation-content.md
docs/research/: perplexity-finance.md
docs/risks/: README.md  RISK-001-workflow-skill-contract-drift.md  RISK-002-agent-skill-unsupported-claims.md  RISK-003-external-agent-integration-portability.md  RISK-004-async-stream-resource-saturation.md  template.md
scripts/: backfill_market_history.sh  diagnose_model_streaming.py  seed_vn100.sh  test_workflow_stream.py
specs/: README.md
specs/001-mvp-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mvp-workflow-platform/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-data-operations/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-workflow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-agentic-chatflow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-evidence-backed-chat/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-language-preferences/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
tests/: __init__.py  conftest.py  test_app.py  test_language_preferences.py  test_platform_services.py
(+319 files in other folders)
